# hotel-reservation-prediction

./: .gitignore  Dockerfile  Jenkinsfile  application.py  pyproject.toml
artifacts/model/: lgbm_model.pkl
config/: config.yaml  model_params.py  paths_config.py
custom_jenkins/: Dockerfile
notebook/: notebook.ipynb
pipeline/: training_pipeline.py
src/: data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
templates/: index.html
utils/: common_functions.py
